2010-04-07  nineties <nineties48@gmail.com>

	* rlc1: replaced 'void' to '()' (unit)
	* rlc1: implemented automatic header generation

2010-04-06  nineties <nineties48@gmail.com>

	* rlc1: implemented
	    named tuple field
	    variant declaration and construction
	    type specification

2010-03-28  nineties <nineties48@gmail.com>

	* rlc1: implemented composite value return

2010-03-27  nineties <nineties48@gmail.com>

	* rlc1: implemented
	    integer arithmetic operations
	    stack-local tuple management
	    pattern matching for tuple
	    don't care pattern
	    deadcode elimination

2010-03-26  nineties <nineties48@gmail.com>

	* added README
	* rlc1:
	    added regalloc.rl
	    implemented liveness analysis
	    implemented register allocation
	* renamed Github repository from growl to rowl

2010-03-25  nineties <nineties48@gmail.com>

	* restart writing this ChangeLog
	* rlc1: implemented system call

2010-01-18  nineties  <nineties48@gmail.com>

	* implemented rlc1/parse.rl
	* implemented rlc1/lexer.rl
	* added rowl.bnf

2010-01-17  nineties  <nineties48@gmail.com>

	* changed syntax of comment block to (% ... %)
	* implemented I/O channels
	* added lib/vim/*
	* implemented hashtable, hashset and hashmap
	* implemented indirect goto into rlc0

2010-01-16  nineties  <nineties48@gmail.com>

	* added rowllib.rl, lex.rl, node.rl and token.rl
	* implemented indirect function call to rlc0

2010-01-15  nineties  <nineties48@gmail.com>

	* added addressof expression
	* renamed "growl" to "rowl"
	* implemented negative integer literal

2010-01-14  nineties  <nineties48@gmail.com>

	* implemented wch() and rch.
	* implemented array declaration by type.
		- int [n], and char [n]
	* added "=>" (.equ) statement
	* refined coded related to string literal.
	* implemented expressions
		- prefix
		- multiplicative
		- additive
		- relational
		- equality
		- and, xor, or
	* implemented if, if-else and while statement
	* added a 'allocate' statement