@@ -1,6 +1,6 @@
 " Language:	Rowl
 " Maintainer:	nineties <nineties48@gmail.com>
-" $Id: rowl.vim 2010-04-07 01:16:47 nineties $
+" $Id: rowl.vim 2010-04-07 08:21:34 nineties $
 
 if exists("b:current_syntax")
     finish
@@ -10,7 +10,7 @@ syn case match
 
 syn keyword rowlCommand   goto label return type
 syn keyword rowlSymbol    if else syscall while
-syn keyword rowlExternal  include export external
+syn keyword rowlExternal  include export import external
 syn keyword rowlType      char int float double
 syn match rowlIdentifier  /\<\h\w*/
 syn match rowlInteger     /-\?\(0\o*\|[1-9]\d*\|0x\x\+\)\>/
@@ -26,8 +26,7 @@ syn match rowlKeyOperator ":"
 syn match rowlKeyOperator "|"
 syn match rowlKeyOperator "->"
 syn match rowlKeyOperator "=>"
-syn match rowlKeyOperator "!"
-syn match rowlConstructor "(\s*)"
+syn match rowlKeyOperator "![^=]"me=e-1
 syn match rowlConstructor "\u\w*\>"
 
 hi def link rowlComment     Comment
