@@ -1,0 +1,3 @@
+(% stdlib.rli generated by rlc1 %)
+
+external exit! (int) -> ();
